components/oauth2-proxy/service-oauth2-proxy-upstream.yaml
# This is a dummy upstream dns entry the oauth2-proxy forwards to.
# Applications that need oauth2 support have VirtualServices that match on this host + uri paths.
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-upstream
  labels:
    app: oauth2-proxy-upstream
    service: oauth2-proxy-upstream
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
