components/oauth2-proxy/serviceentry-auth0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: auth0
spec:
  hosts:
  - dev-tqolyn342htgbviz.us.auth0.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
