components/oauth2-proxy/virtualservice-oauth-bookinfo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth-bookinfo
spec:
  gateways:
  - istio-ingress/oauth-bookinfo
  hosts:
  - oauth-bookinfo-istio-ingress.apps-crc.testing
  http:
  - route:
    - destination:
        host: oauth2-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 80
    # match:
    # - uri:
    #     exact: /productpage
    # - uri:
    #     prefix: /static
    # - uri:
    #     exact: /login
    # - uri:
    #     exact: /logout
    # - uri:
    #     prefix: /api/v1/products
...
