components/oauth2-proxy/virtualservice-oauth2-proxy-upstream.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-upstream
spec:
  hosts:
  - oauth2-proxy-upstream.oauth2-proxy.svc.cluster.local
  http:
  - route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080
...
